# cdchen-openscad

./: README.md
learning/: cube.scad  cup test.scad  cup.3mf  cup.scad  cup.stl  cylinder.scad  difference.scad
learning-build123d/: pyproject.toml
