[tool.poetry]
name = "learning-build123d"
version = "0.1.0"
description = ""
authors = ["Christopher Chen <christopher.chen1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
build123d = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
